v0.0.5
- Setings bug fixes
- Trakt ID and secret modifications

v0.0.4
- VPN support

v0.0.3
- Add-on and file change triggers

v0.0.2
- Rework to allow multiple timers
- Add cache clearing

v0.0.1
- Initial version
- Limit playlist playback